codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: monthly ━━━━━━━─── 65% left · weekly ━━━━━───── 50% left
terminal title: monthly ━━━━━━━─── 65% left | weekly ━━━━━───── 50% left
